--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "cloudinary-labs/cloudinary-laravel": "^3.0",
         "kavist/rajaongkir": "1.1",
         "laravel/framework": "^11.31",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "midtrans/midtrans-php": "^2.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
