--- a/package.json
+++ b/package.json
@@ -16,11 +16,8 @@
         "tailwindcss": "^3.4.17",
         "vite": "^6.0.11"
     },
-    
     "dependencies": {
-    "flowbite": "^2.3.0",
-    "tailwindcss": "^3.3.3",
-    "postcss": "^8.4.24",
-    "autoprefixer": "^10.4.14"
+        "@tailwindcss/vite": "^4.1.4",
+        "flowbite": "^3.1.2"
     }
 }
