--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,8 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "google/cloud-storage": "^1.48",
         "laravel/framework": "^11.31",
-        "laravel/tinker": "^2.9",
-        "midtrans/midtrans-php": "^2.6",
-        "spatie/laravel-google-cloud-storage": "^2.3"
+        "laravel/tinker": "^2.9"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
