--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "kavist/rajaongkir": "1.1",
+        "kavist/rajaongkir": "^1.1",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9"
     },
