--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "kavist/rajaongkir": "^1.1",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
-        "midtrans/midtrans-php": "^2.6"
+        "midtrans/midtrans-php": "^2.6",
+        "spatie/laravel-google-cloud-storage": "^2.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
